tests/lexer/invalid/test_missing_quote.src
// Тест 6: Отсутствующая кавычка
string s = "hello;
string t = world";
string u = "test;